--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
 asgiref==3.4.0
+astroid==2.6.5
 Django==3.2.4
+flake8==3.9.2
+flake8-django==1.1.2
+flake8-html==0.4.1
+importlib-metadata==4.6.1
+isort==5.9.2
+Jinja2==3.0.1
+lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
+mccabe==0.6.1
 Pillow==8.2.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+Pygments==2.9.0
+pylint==2.9.5
+pylint-plugin-utils==0.6
 pytz==2021.1
 sqlparse==0.4.1
+toml==0.10.2
+wrapt==1.12.1
+zipp==3.5.0
